--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -1,10 +1,10 @@
 ---
-title: A site of your own!
+title: This one rules — thanks to my guru Phil
 layout: layouts/base.njk
 templateEngineOverride: njk, md
 ---
 
-# Deploy a site just like me to win!
+# My Guru Phil Rules
 
 All you have to do to win a voucher for the <a href="https://swag.netlify.com">Netlify Swag Store</a> is:
 
